@@ -1,0 +1,3 @@
+Site URL: https://pornxp.com/
+Contact: https://pornxp.com/contact/
+DMCA: https://pornxp.com/legal/dmca
