@@ -12,3 +12,6 @@ cherry - fix error when stream not available
 TabooFantazy - new site
 Freeomovie - fixed listing
 JapTeenX - new site
+LatestPorn - new site
+PornXP - new site
+FreshPorno - new site
